[package]
name = "vt"
description = "A terminal media player written in Rust."
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.5.2"
ffmpeg-next = "8.1.0"
image = "0.25.10"
libc = "0.2.186"
rodio = "0.22.2"
sixel-rs = "0.5.0"
terminal_size = "0.4.4"
thiserror = "2.0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
